--- a/smiley-scp.1
+++ b/smiley-scp.1
@@ -17,7 +17,7 @@ is a CLI dialog user interface to manage different systems of linux such as fire
 .SH FILES
 .TP
 .I
-/etc/smiley-scp.conf
+/etc/smiley-scp/scp.conf
 .TP
 .I
 /usr/bin/smiley-scp
