--- a/smiley-scp.1
+++ b/smiley-scp.1
@@ -12,7 +12,7 @@
 
 .SH DESCRIPTION
 .B smiley-scp
-is a CLI dialog user interface to manage different systems of linux such as firewallD, UFW, Updating the system, Installing and managing Plex, Samba, VSFTPD, SSH, viewing disk utilization, managing permissions, power management, and viewing a tmux split between htop and nload.
+is a CLI dialog user interface to manage different systems of linux such as firewallD, UFW, Updating the system, Installing and managing OpenVPN, Plex, Samba, VSFTPD, SSH, viewing disk utilization, managing permissions, power management, and viewing a tmux split between htop and nload.
 
 .SH FILES
 .TP
