--- a/smiley-scp.1
+++ b/smiley-scp.1
@@ -20,6 +20,9 @@ is a CLI dialog user interface to manage different systems of linux such as fire
 /etc/smiley-scp/scp.conf
 .TP
 .I
+/var/log/smiley-scp/ip.log
+.TP
+.I
 /bin/smiley-scp
 
 .SH COPYRIGHT
