--- a/Install
+++ b/Install
@@ -60,10 +60,9 @@ sudo mv -fv ../SCP /etc/smiley-scp
 sudo chown -Rfv root:root /etc/smiley-scp
 sudo chmod -Rfv a+x /etc/smiley-scp/scripts
 sudo chmod -Rfv a+x /etc/smiley-scp/SCP
-sudo mkdir /var/log/smiley-scp
-sudo touch /var/log/smiley-scp/ip.log
-sudo chown -Rfv root:root /var/log/smiley-scp
-sudo chmod -Rfv 776 /var/log/smiley-scp
+sudo touch /var/log/smiley-ip.log
+sudo chown -Rfv $USER:$USER /var/log/smiley-ip.log
+sudo chmod -Rfv 770 /var/log/smiley-ip.log
 
 echo Installation complete...
 sleep 2
