--- a/smiley-scp.1
+++ b/smiley-scp.1
@@ -20,7 +20,7 @@ is a CLI dialog user interface to manage different systems of linux such as fire
 /etc/smiley-scp/scp.conf
 .TP
 .I
-/var/log/smiley-scp/ip.log
+/var/log/smiley-ip.log
 .TP
 .I
 /bin/smiley-scp
